Fix tag searching.

--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
     <div class="container" id="searchfilters" style="margin-bottom:20px;">
       <div class="row" style="margin-bottom:20px;">
         <div class="dropdown">
-          <button class="btn btn-dark dropdown-toggle" type="button" id="dropdown-speaker" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <button class="btn btn-dark dropdown-toggle" type="button" id="dropdown-speaker" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" speaker-id="Speaker">
             Speaker
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="speaker-dropdown-list">
