Add "Any" to placeholder values.

--- a/www/index.html
+++ b/www/index.html
@@ -15,28 +15,28 @@
       <div class="row" style="margin-bottom:20px;">
         <div class="dropdown">
           <button class="btn btn-dark dropdown-toggle" type="button" id="dropdown-speaker" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" speaker-id="Speaker">
-            Speaker
+            Speaker (Any)
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="speaker-dropdown-list">
           </div>
         </div>
         <div class="dropdow ml-md-auto">
           <button class="btn btn-dark dropdown-toggle" type="button" id="dropdown-conference" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Conference
+            Conference (Any)
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="conference-dropdown-list">
           </div>
         </div>
         <div class="dropdow ml-md-auto">
           <button class="btn btn-dark dropdown-toggle" type="button" id="dropdown-year" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Year
+            Year (Any)
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="year-dropdown-list">
           </div>
         </div>
         <div class="dropdow ml-md-auto">
           <button class="btn btn-dark dropdown-toggle" type="button" id="dropdown-tag" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Tag
+            Tag (Any)
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="tag-dropdown-list">
           </div>
