--- a/www/index.html
+++ b/www/index.html
@@ -47,6 +47,7 @@
       <div class="container" id="searcherror" style="margin-bottom:20px;">
       </div>
       <center>
+        <button type="button" class="btn btn-primary" onclick="onClearFilters()" style="margin-right: 10px">Clear Filters</button>
         <button type="button" class="btn btn-primary" onclick="onSearch()">Search</button>
       </center>
     </div>
