--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
+
     <link rel="stylesheet" href="css/style.css"/>
+
+
     <title>C++ Talks Index</title>
   </head>
   <body>
@@ -13,12 +17,10 @@
     <!-- Filter dropdowns, error field and search button. -->
     <div class="container" id="searchfilters" style="margin-bottom:20px;">
       <div class="row" style="margin-bottom:20px;">
-        <div class="dropdown">
-          <button class="btn btn-dark dropdown-toggle" type="button" id="speaker-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" speaker-id="Speaker">
-            Speaker (Any)
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="speaker-dropdown-list">
-          </div>
+        <div>
+          <select class="selectpicker" data-style="btn-dark" data-live-search="true" id="speaker-dropdown-list" multiple>
+            <option selected="selected" class="cspeaker">Speaker (Any)</option>
+          </select>
         </div>
         <div class="dropdown ml-md-auto">
           <button class="btn btn-dark dropdown-toggle" type="button" id="conference-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -59,6 +61,9 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
+
     <script src="/js/script.js"></script>
   </body>
 </html>
