Fix link between filter and js function.

--- a/www/index.html
+++ b/www/index.html
@@ -18,8 +18,8 @@
     <div class="container" id="searchfilters" style="margin-bottom:20px;">
       <div class="row" style="margin-bottom:20px;">
         <div>
-          <select class="selectpicker" data-style="btn-dark" data-live-search="true" id="speaker-dropdown-list" multiple>
-            <option selected="selected" class="cspeaker">Speaker (Any)</option>
+          <select class="selectpicker" data-style="btn-dark" data-live-search="true" id="speaker-dropdown-list">
+            <option selected="selected" value="Speaker" class="cspeaker">Speaker (Any)</option>
           </select>
         </div>
         <div class="dropdown ml-md-auto">
