--- a/www/index.html
+++ b/www/index.html
@@ -18,30 +18,24 @@
     <div class="container" id="searchfilters" style="margin-bottom:20px;">
       <div class="row" style="margin-bottom:20px;">
         <div>
-          <select class="selectpicker" data-style="btn-dark" data-live-search="true" id="speaker-dropdown-list">
+          <select class="selectpicker" data-style="btn-dark" data-live-search="true" id="speaker-select">
             <option selected="selected" value="Speaker" class="cspeaker">Speaker (Any)</option>
           </select>
         </div>
-        <div class="dropdown ml-md-auto">
-          <button class="btn btn-dark dropdown-toggle" type="button" id="conference-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Conference (Any)
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="conference-dropdown-list">
-          </div>
+        <div class="ml-md-auto">
+          <select class="selectpicker" data-style="btn-dark" id="conference-select">
+            <option selected="selected" value="Conference" class="cspeaker">Conference (Any)</option>
+          </select>
         </div>
-        <div class="dropdown ml-md-auto">
-          <button class="btn btn-dark dropdown-toggle" type="button" id="year-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Year (Any)
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="year-dropdown-list">
-          </div>
+        <div class="ml-md-auto">
+          <select class="selectpicker" data-style="btn-dark" id="year-select">
+            <option selected="selected" value="Year" class="cspeaker">Year (Any)</option>
+          </select>
         </div>
-        <div class="dropdown ml-md-auto">
-          <button class="btn btn-dark dropdown-toggle" type="button" id="tag-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Tag (Any)
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="tag-dropdown-list">
-          </div>
+        <div class="ml-md-auto">
+          <select class="selectpicker" data-style="btn-dark" data-live-search="true" id="tag-select">
+            <option selected="selected" value="Tag" class="cspeaker">Tag (Any)</option>
+          </select>
         </div>
       </div>
 
